test/parser/correct/cor_06_read_array.pl0
program TestReadArray;
var arr[5], i;
begin
    for i := 0 to 4 do
        read(arr[i]);
    
    for i := 0 to 4 do
        write(arr[i])
end
