test/parser/error/err_25_for_to_missing.pl0
program p; 
var i; 
begin 
for i := 1 10 do 
end